<resources>
    <string name="app_name">Random Restaurant Picker</string>
    <string name="aboutText">Random Restaurant Generator is an open source Android application that picks a restaurant for you based on your location. The source code can be found below.</string>
    <string name="license">License: MIT</string>
    <string name="filter_hint">Categories e.g. vegan, sushi, bbq</string>
    <string name="mile_hint">Maximum miles away e.g. 1, 5, 20 (Default: 10 miles)</string>
    <string name="string_button_text_generate">pick restaurant</string>
    <string name="string_button_text_loading">LOADING…</string>
    <string name="string_empty_saved_list">You have no favorite restaurants.</string>
    <string name="string_empty_dislike_list">You have not blocked any restaurants.</string>
    <string name="string_empty_history_list">You have not searched for any restaurants.</string>
    <string name="string_getting_location">Getting location…</string>
    <string name="string_current_location">Current Location</string>
    <string name="string_location_not_found">"Location has not been found yet. Please try again. Acquiring GPS signal may take up to a minute on some devices."</string>
    <string name="string_enter_valid_location">Please enter a valid address, city, zip code, or use GPS by clicking the icon.</string>
    <string name="string_no_restaurants_found">No restaurants found at this location that meet filters requested, please enter a different location.</string>
    <string name="string_timed_out_msg">Connection timed out, check your internet connection and try again.</string>
    <string name="string_task_running_msg">Task still running, please wait.</string>
    <string name="string_no_network">No network connection, please turn on your network.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="string_location_permission_required">Location permission are required to use GPS.</string>
    <string name="string_location_perm_rationale">Location permissions have been denied. Please enable them manually in settings.</string>
    <string name="string_location_perm_manual">Location permissions denied. Please enter location manually.</string>
    <string name="string_price_range">Price range</string>
    <string name="string_filter_msg">Optional filter settings</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="string_one_dollar">$</string>
    <string name="string_two_dollar">$$</string>
    <string name="string_three_dollar">$$$</string>
    <string name="string_four_dollar">$$$$</string>
    <string name="string_filter_by_price_range">Filter by price range</string>
    <string name="string_open_at_time">Open at time</string>
    <string name="string_open_at">Open At</string>
    <string name="string_any_time">Any time</string>
    <string name="drawer_open">opening</string>
    <string name="drawer_close">closing</string>
    <string-array
        name="Apis">
        <item>Yelp</item>
        <item>Google Maps</item>
        <item>Uber</item>
    </string-array>
</resources>
